--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 .self-container{
     height: 100vh;
+    background-color: rgba(89, 230, 252, 1);
+    background-image: linear-gradient(90deg, rgba(89, 230, 252, 1) 0%, rgba(196, 105, 17, 1) 100%);
 }
 
 .self-container, .alert-container{
