--- a/src/style.css
+++ b/src/style.css
@@ -32,3 +32,37 @@
 .login-form input, button {
     margin: 20px 0px;
 }
+
+.table-container{
+    width: 400px;
+}
+
+.table-container a{
+    text-decoration: none;
+    color: black;
+}
+
+.detail-container{
+    display: flex;
+}
+.detail-stats{
+    height: 100vh;
+    width: 400px;
+}
+.detail-description{
+    padding: 25px;
+}
+.aside ul li {
+    font-size: 24px;
+    margin: 20px -15px;
+}
+
+.aside{
+    width: 300px;
+}
+.aside ul {
+    width: 100%;
+    list-style-type: none;
+}
+
+
